// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compositions Sidebar renders a sidebar correctly. 1`] = `
<styled.nav
  active={false}
>
  <styled.ul>
    <li>
      <SidebarLink
        to="#"
      >
        Test
      </SidebarLink>
    </li>
  </styled.ul>
  <PoweredBy />
</styled.nav>
`;

exports[`Compositions Sidebar renders an active sidebar correctly 1`] = `
<styled.nav
  active={true}
>
  <styled.ul>
    <li>
      <SidebarLink
        to="#"
      >
        Test
      </SidebarLink>
    </li>
  </styled.ul>
  <PoweredBy />
</styled.nav>
`;
